--- a/courses/templates/course.html
+++ b/courses/templates/course.html
@@ -8,8 +8,8 @@
         <!-- Card header -->
         <div class="flex flex-col items-center">
             <div class="flex flex-row items-center justify-center">
-                <a href="{% url 'professors:specific_professor' professor.pk %}">
-                    <h1 class="text-3xl font-bold text-gray-800">{{ professor.first_name }} {{ professor.last_name }}</h1>
+                <a href="{% url 'professors:specific_professor' course.professor.pk %}">
+                    <h1 class="text-3xl font-bold text-gray-800">{{ course.professor.first_name }} {{ course.professor.last_name }}</h1>
                 </a>
                 <img class="w-10 h-10 ml-2 rounded-full"
                      src="{% static 'img/upr_logo.jpg' %}"
@@ -137,5 +137,5 @@
     </section>
 {% endblock %}
 {% block scripts %}
-    <script src="{% static 'js/toggles.js' %}"></script>
+    <script src="{% static 'js/comment-toggle.js' %}"></script>
 {% endblock %}
