--- a/reviews/templates/course_review.html
+++ b/reviews/templates/course_review.html
@@ -60,15 +60,25 @@
                 <div class="flex flex-row items-center justify-between w-11/12">
                     <div class="flex flex-row items-center justify-center space-x-1">
                         <label for="organized" class="text-xl font-bold text-gray-600">Organizado</label>
-                        <input type="checkbox" id="organized" name="organized" value="organized" class="rounded-md">
+                        <input type="checkbox"
+                               id="organized"
+                               name="organized"
+                               value="organized"
+                               class="rounded-md">
                     </div>
                     <div class="flex flex-row items-center justify-center space-x-1">
                         <label for="pro_student" class="text-xl font-bold text-gray-600">Pro estudiante</label>
-                        <input type="checkbox" id="pro_student" name="pro_student" value="pro_student" class="rounded-md">
+                        <input type="checkbox"
+                               id="pro_student"
+                               name="pro_student"
+                               value="pro_student"
+                               class="rounded-md">
                     </div>
                 </div>
                 <div class="flex flex-row items-center justify-between ">
-                    <input type="submit" value="Calificar" class="w-96 h-10 rounded-xl bg-indigo-600 text-white font-bold">
+                    <input type="submit"
+                           value="Calificar"
+                           class="w-96 h-10 rounded-xl bg-indigo-600 text-white font-bold">
                 </div>
                 <!-- Error Message -->
                 {% if error %}
