--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -54,7 +54,7 @@
             <div class="flex flex-col mt-8 items-center justify-center md:space-x-6 md:flex-row">
                 <div class="flex flex-col-reverse items-center justify-center md:flex-col md:w-1/3">
                     <div class="flex flex-col items-center justify-center">
-                        <img src="{% static 'img/sign-up-ss.png' %}"
+                        <img src="{% static 'img/registrate.png' %}"
                              alt="teacher"
                              class="rounded-lg">
                         <h3 class="text-2xl font-bold text-indigo-600 mt-4">Regístrate 📝</h3>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="flex flex-col items-center justify-center md:w-1/3">
                     <div class="flex flex-col items-center justify-center">
-                        <img src="{% static 'img/sign-up-ss.png' %}"
+                        <img src="{% static 'img/profesores.png' %}"
                              alt="teacher"
                              class="rounded-lg">
                         <h3 class="text-2xl font-bold text-indigo-600 mt-4">Cursos y Profesores 👨‍🏫</h3>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="flex flex-col items-center justify-center md:w-1/3">
                     <div class="flex flex-col items-center justify-center">
-                        <img src="{% static 'img/sign-up-ss.png' %}"
+                        <img src="{% static 'img/confesiones.png' %}"
                              alt="teacher"
                              class="rounded-lg">
                         <h3 class="text-2xl font-bold text-indigo-600 mt-4">Confiésate ✝️</h3>
