--- a/courses/templates/course.html
+++ b/courses/templates/course.html
@@ -73,13 +73,14 @@
     <section class="flex flex-col justify-center items-center mt-12">
         <div class="flex flex-row">
             <h1 class="text-3xl font-bold text-gray-800">Comentarios</h1>
-            {% if not user_commented %}
+            {% if not user_commented and user.is_authenticated %}
                 <button class="flex flex-row items-center justify-center ml-1 px-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500 text-lg font-bold text-white"
                         id="toggle-comment-form">
                     <p class="">+</p>
                 </button>
             {% endif %}
         </div>
+        {% if user.is_authenticated %}
         <form action="{% url 'comments:course_comment' course.pk %}"
               method="post"
               class="hidden flex-col justify-center items-center mt-4 md:w-1/3"
@@ -98,6 +99,7 @@
                 <p class="text-lg font-bold text-white">Enviar</p>
             </button>
         </form>
+        {% endif %}
         <div class="flex flex-col justify-center items-center">
             {% for comment in comments %}
                 <div class="flex flex-col my-6 w-3/4 space-y-4 p-4 border border-gray-200 shadow-md rounded-xl md:hover:animate-pulse">
@@ -109,24 +111,24 @@
                         <p class="text-lg text-gray-800">{{ comment.text }}</p>
                     </div>
                     <div class="flex justify-end items-end">
-                        <div class="flex flex-row items-center">
+                        <button class="flex flex-row items-center like-button" data-comment-id="{{comment.pk}}">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  viewBox="0 0 20 20"
                                  fill="currentColor"
                                  class="w-5 h-5">
                                 <path fill-rule="evenodd" d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z" clip-rule="evenodd" />
                             </svg>
-                            <p class="text-red-600">{{ comment.upvotes }}</p>
-                        </div>
-                        <div class="flex flex-row items-center ml-4">
+                            <p class="text-red-600 like-count">{{ comment.upvotes_count }}</p>
+                        </button>
+                        <button class="flex flex-row items-center ml-4" id="dislike-button">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  viewBox="0 0 20 20"
                                  fill="currentColor"
                                  class="w-5 h-5">
                                 <path fill-rule="evenodd" d="M10 3a.75.75 0 01.75.75v10.638l3.96-4.158a.75.75 0 111.08 1.04l-5.25 5.5a.75.75 0 01-1.08 0l-5.25-5.5a.75.75 0 111.08-1.04l3.96 4.158V3.75A.75.75 0 0110 3z" clip-rule="evenodd" />
                             </svg>
-                            <p class="text-indigo-600">{{ comment.downvotes }}</p>
-                        </div>
+                            <p class="text-indigo-600">{{ comment.downvotes_count }}</p>
+                        </button>
                     </div>
                 </div>
             {% endfor %}
@@ -139,5 +141,9 @@
     </section>
 {% endblock %}
 {% block scripts %}
+    <script>
+        var csrftoken = '{{ csrf_token }}';
+    </script>
     <script src="{% static 'js/course.js' %}"></script>
+    <script src="{% static 'js/likedislike.js' %}"></script>
 {% endblock %}
