--- a/courses/templates/course.html
+++ b/courses/templates/course.html
@@ -81,24 +81,24 @@
             {% endif %}
         </div>
         {% if user.is_authenticated %}
-        <form action="{% url 'comments:course_comment' course.pk %}"
-              method="post"
-              class="hidden flex-col justify-center items-center mt-4 md:w-1/3"
-              id="comment-form">
-            {% csrf_token %}
-            <label for="comment" class="sr-only">Comentario</label>
-            <textarea name="text"
-                      id="comment-text"
-                      cols="30"
-                      rows="10"
-                      class="md:w-3/4 p-2 rounded-md shadow-md border border-gray-200"></textarea>
-            <input type="hidden" name="course" value="{{ course.pk }}">
-            <button type="submit"
-                    id ="submit-comment"
-                    class="flex flex-row items-center justify-center px-2 mt-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500">
-                <p class="text-lg font-bold text-white">Enviar</p>
-            </button>
-        </form>
+            <form action="{% url 'comments:course_comment' course.pk %}"
+                  method="post"
+                  class="hidden flex-col justify-center items-center mt-4 md:w-1/3"
+                  id="comment-form">
+                {% csrf_token %}
+                <label for="comment" class="sr-only">Comentario</label>
+                <textarea name="text"
+                          id="comment-text"
+                          cols="30"
+                          rows="10"
+                          class="md:w-3/4 p-2 rounded-md shadow-md border border-gray-200"></textarea>
+                <input type="hidden" name="course" value="{{ course.pk }}">
+                <button type="submit"
+                        id="submit-comment"
+                        class="flex flex-row items-center justify-center px-2 mt-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500">
+                    <p class="text-lg font-bold text-white">Enviar</p>
+                </button>
+            </form>
         {% endif %}
         <div class="flex flex-col justify-center items-center">
             {% for comment in comments %}
@@ -111,23 +111,24 @@
                         <p class="text-lg text-gray-800">{{ comment.text }}</p>
                     </div>
                     <div class="flex justify-end items-end">
-                        <button class="flex flex-row items-center like-button" data-comment-id="{{comment.pk}}">
+                        <p>{{ comment.score }}</p>
+                        <button class="flex flex-row items-center like-button"
+                                data-comment-id="{{ comment.pk }}">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  viewBox="0 0 20 20"
                                  fill="currentColor"
                                  class="w-5 h-5">
                                 <path fill-rule="evenodd" d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z" clip-rule="evenodd" />
                             </svg>
-                            <p class="text-red-600 like-count">{{ comment.upvotes_count }}</p>
                         </button>
-                        <button class="flex flex-row items-center ml-4" id="dislike-button">
+                        <button class="flex flex-row items-center ml-1 dislike-button"
+                                data-comment-id="{{ comment.pk }}">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  viewBox="0 0 20 20"
                                  fill="currentColor"
                                  class="w-5 h-5">
                                 <path fill-rule="evenodd" d="M10 3a.75.75 0 01.75.75v10.638l3.96-4.158a.75.75 0 111.08 1.04l-5.25 5.5a.75.75 0 01-1.08 0l-5.25-5.5a.75.75 0 111.08-1.04l3.96 4.158V3.75A.75.75 0 0110 3z" clip-rule="evenodd" />
                             </svg>
-                            <p class="text-indigo-600">{{ comment.downvotes_count }}</p>
                         </button>
                     </div>
                 </div>
@@ -141,9 +142,7 @@
     </section>
 {% endblock %}
 {% block scripts %}
-    <script>
-        var csrftoken = '{{ csrf_token }}';
-    </script>
+    <script>var csrftoken = '{{ csrf_token }}';</script>
     <script src="{% static 'js/course.js' %}"></script>
     <script src="{% static 'js/likedislike.js' %}"></script>
 {% endblock %}
