--- a/courses/templates/course.html
+++ b/courses/templates/course.html
@@ -100,7 +100,7 @@
                 </button>
             </form>
         {% endif %}
-        <div class="flex flex-col justify-center items-center">
+        <div class="flex flex-col justify-center items-center md:w-9/12">
             {% for comment in comments %}
                 <div class="flex flex-col my-6 w-3/4 space-y-4 p-4 border border-gray-200 shadow-md rounded-xl">
                     <div class="flex justify-between">
