--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -42,6 +42,12 @@
                            class="w-96 h-10 rounded-xl border-2 border-gray-300 focus:border-indigo-600 focus:outline-none px-4"/>
                 </div>
                 <div class="flex flex-col items-center justify-center space-y-2">
+                    <label for="email" class="text-xl font-bold text-gray-600">Email</label>
+                    <input type="email"
+                           name="email"
+                           id="email"
+                           class="w-96 h-10 rounded-xl border-2 border-gray-300 focus:border-indigo-600 focus:outline-none px-4"/>
+                <div class="flex flex-col items-center justify-center space-y-2">
                     <label for="password" class="text-xl font-bold text-gray-600">Contraseña</label>
                     <input type="password"
                            name="password"
