--- a/professors/templates/professor.html
+++ b/professors/templates/professor.html
@@ -118,10 +118,7 @@
                         <!-- body -->
                         <div class="flex flex-col justify-start items-start md:text-md">
                             <p class="flex flex-row">
-                                <span class="font-bold text-gray-700">Universidad:</span> <span class="text-gray-600">{{ course.college }}</span>
-                                <img src="{% static 'img/upr_logo.jpg' %}"
-                                     alt=""
-                                     class="ml-1 w-5 h-5 rounded-full">
+                                <span class="font-bold text-gray-700">Dificultad:</span> <span class="text-gray-600">{{ course.difficulty_letter }}</span>
                             </p>
                             <p>
                                 <span class="font-bold text-gray-700">Facultad:</span> <span class="text-gray-600">{{ course.faculty }}</span>
