added newlines to comments

--- a/courses/templates/course.html
+++ b/courses/templates/course.html
@@ -117,7 +117,7 @@
                         </div>
                     </div> 
                     <div>
-                        <p class="text-lg text-gray-800">{{ comment.text }}</p>
+                        <p class="text-lg text-gray-800">{{ comment.text|linebreaksbr }}</p>
                     </div>
                     <div class="flex justify-end items-end">
                         <p> {{ comment.score }} </p>
