--- a/professors/templates/professor.html
+++ b/professors/templates/professor.html
@@ -21,6 +21,7 @@
                 <h2 class="text-2xl font-bold text-gray-800 md:text-3xl">Estadísticas</h2>
                 <hr class=" border-gray-300">
             </div>
+            {% if professor.review_count > 0 %}
             <div class="flex flex-col mt-4 justify-start items-start space-y-2 md:space-y-0 md:justify-between md:items-center md:flex-row md:w-3/4">
                 <div class="flex flex-row items-center justify-center md:flex-col">
                     <h2 class="hidden text-2xl font-bold text-gray-800 md:block">Dificultad</h2>
@@ -52,6 +53,12 @@
                     <h2 class="text-lg font-bold text-gray-800 md:hidden">Pro estudiante: {{ professor.pro_student }}</h2>
                 </div>
             </div>
+            {% else %}
+                <div class="flex flex-col items-center justify-center">
+                    <h2 class="text-2xl font-bold text-gray-800">No hay estadísticas disponibles</h2>
+                    <p class="text-lg font-bold text-gray-600">Este profesor no tiene reseñas</p>
+                </div>
+            {% endif %}
         </div>
     </section>
     <!-- Courses by this professor -->
