bug fix grade stat

--- a/professors/templates/professor_list.html
+++ b/professors/templates/professor_list.html
@@ -35,7 +35,7 @@
                                 <span class="font-bold text-gray-700">Facultad:</span> <span class="text-gray-600">{{ professor.faculty }}</span>
                             </p>
                             <p>
-                                <span class="font-bold text-gray-700">Dificultad:</span> <span class="text-gray-600">{{ professor.difficulty_letter }}</span>
+                                <span class="font-bold text-gray-700">Dificultad:</span> <span class="text-gray-600">{{ professor.difficulty }}</span>
                             </div>
                         </a>
                     </div>
