--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -10,18 +10,9 @@
             <div class="flex flex-row justify-center items-center space-x-4 mt-4">
                 <!-- Google Card -->
                 <div class="flex flex-col items-center justify-center bg-white rounded-xl shadow-xl p-4">
-                    <a href="{% url 'social:begin' 'google-oauth2' %}?next={{ request.path }}" class="flex flex-row justify-center items-center space-x-2">
+                    <a href="{% url 'social:begin' 'google-oauth2' %}?next={{ next }}" class="flex flex-row justify-center items-center space-x-2">
                         <img src="{% static 'img/google.png' %}" alt="google logo" class="w-8 h-8"/>
                         <h1 class="text-xl font-bold text-gray-600">Google</h1>
-                    </a>
-                </div>
-                <!-- Facebook Card -->
-                <div class="flex flex-col items-center justify-center bg-white rounded-xl shadow-xl p-4">
-                    <a href="#" class="flex flex-row justify-center items-center space-x-2">
-                        <img src="{% static 'img/facebook.png' %}"
-                             alt="facebook logo"
-                             class="w-8 h-8"/>
-                        <h1 class="text-xl font-bold text-gray-600">Facebook</h1>
                     </a>
                 </div>
             </div>
