--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 {% load static %}
-<footer class="flex flex-col justify-center items-center space-y-2 mt-auto mb-1">
+<footer class="flex flex-col justify-center items-center space-y-2 mt-auto mb-4 p-4">
     <!-- links -->
-    <div class="flex justify-between items-center space-x-2">
+    <div class="flex justify-between items-center space-x-2 text-xl">
         <a href="{% url 'home:about' %}" class="hover:text-indigo-300">About</a>
         <a href="{% url 'reviews:suggestions' %}?next={{ request.path }}" class="text-indigo-600 hover:text-indigo-300">Sugerencias</a>   
         <a href="#" class="hover:text-indigo-300">Contact</a>
