--- a/professors/templates/professor.html
+++ b/professors/templates/professor.html
@@ -113,7 +113,7 @@
             {% for course in courses %}
                 <div class="flex toggle course flex-col rounded-lg p-6 m-4 shadow-md border border-gray-200  md:w-3/12 md:hover:animate-pulse"
                      data-college="{{ course.college }}"
-                     data-faculty="{{ course.faculty }}"
+                     data-department="{{ course.department }}"
                      data-name="{{ course.name }}">
                     <a href="{% url 'courses:specific_course' course.pk %}"
                        class="space-y-2">
@@ -127,7 +127,7 @@
                                 <span class="font-bold text-gray-700">Dificultad:</span> <span class="text-gray-600">{{ course.difficulty_letter }}</span>
                             </p>
                             <p>
-                                <span class="font-bold text-gray-700">Facultad:</span> <span class="text-gray-600">{{ course.faculty }}</span>
+                                <span class="font-bold text-gray-700">Departamento:</span> <span class="text-gray-600">{{ course.department }}</span>
                             </p>
                             <p>
                                 <span class="font-bold text-gray-700">Codificación:</span> <span class="text-gray-600">{{ course.codification }}</span>
