--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -79,7 +79,7 @@
                         <img src="{% static 'img/confesiones.png' %}"
                              alt="teacher"
                              class="rounded-lg">
-                        <h3 class="text-2xl font-bold text-indigo-600 mt-4">Confiésate ✝️</h3>
+                        <h3 class="text-2xl font-bold text-indigo-600 mt-4">Confiésate ✝️<span class="p-2 ml-1 text-sm border-2 text-gray-500 border-green-500 rounded-lg">Coming Soon</span></h3>
                         <p class="text-gray-600 text-center mt-4 px-4">
                             Lee las confesiones de otros estudiantes, haz una confesión anónima o comenta.
                         </p>
@@ -90,7 +90,7 @@
     </section>
     <!-- End Que es University Hub? -->
     <!-- Trending Confessions -->
-    <section class="md:text-2xl">
+    <section class="hidden md:text-2xl">
         <div class="container mx-auto py-20">
             <!-- Header of section -->
             <div class="flex flex-col items-center">
