--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
                 <!-- Google Card -->
                 <div class="flex flex-col items-center justify-center bg-white rounded-xl shadow-xl p-4">
                     <a href="{% url 'social:begin' 'google-oauth2' %}?next={{ next }}" class="flex flex-row justify-center items-center space-x-2">
-                        <img src="{% static 'img/google.png' %}" alt="google logo" class="w-8 h-8"/>
+                        <img src="{% static 'img/Google.png' %}" alt="google logo" class="w-8 h-8"/>
                         <h1 class="text-xl font-bold text-gray-600">Google</h1>
                     </a>
                 </div>
