--- a/courses/templates/course.html
+++ b/courses/templates/course.html
@@ -120,33 +120,38 @@
                         <p class="text-lg text-gray-800">{{ comment.text|linebreaksbr }}</p>
                     </div>
                     <div class="flex justify-end items-end">
-                        <p>{{ comment.score }}</p>
                         {% if user.is_authenticated %}
-                        <button class="flex flex-row items-center like-button"
-                                data-comment-id="{{ comment.pk }}">
-                            <svg xmlns="http://www.w3.org/2000/svg"
-                                 viewBox="0 0 20 20"
-                                 fill="currentColor"
-                                 class="w-5 h-5">
-                                <path fill-rule="evenodd" d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z" clip-rule="evenodd" />
-                            </svg>
-                        </button>
-                        <button class="flex flex-row items-center ml-1 dislike-button"
-                                data-comment-id="{{ comment.pk }}">
-                            <svg xmlns="http://www.w3.org/2000/svg"
-                                 viewBox="0 0 20 20"
-                                 fill="currentColor"
-                                 class="w-5 h-5">
-                                <path fill-rule="evenodd" d="M10 3a.75.75 0 01.75.75v10.638l3.96-4.158a.75.75 0 111.08 1.04l-5.25 5.5a.75.75 0 01-1.08 0l-5.25-5.5a.75.75 0 111.08-1.04l3.96 4.158V3.75A.75.75 0 0110 3z" clip-rule="evenodd" />
-                            </svg>
-                        </button>
+                        <div class="flex flex-row items-center space-x-2">
+                            <p class="text-lg font-bold text-gray-900">{{ comment.score }}</p>
+                            <button class="flex flex-row items-center like-button"
+                                    data-comment-id="{{ comment.pk }}">
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 20 20"
+                                    fill="currentColor"
+                                    class="w-5 h-5">
+                                    <path fill-rule="evenodd" d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z" clip-rule="evenodd" />
+                                </svg>
+                            </button>
+                            <button class="flex flex-row items-center ml-1 dislike-button"
+                                    data-comment-id="{{ comment.pk }}">
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 20 20"
+                                    fill="currentColor"
+                                    class="w-5 h-5">
+                                    <path fill-rule="evenodd" d="M10 3a.75.75 0 01.75.75v10.638l3.96-4.158a.75.75 0 111.08 1.04l-5.25 5.5a.75.75 0 01-1.08 0l-5.25-5.5a.75.75 0 111.08-1.04l3.96 4.158V3.75A.75.75 0 0110 3z" clip-rule="evenodd" />
+                                </svg>
+                            </button>
+                        </div>
                         {% else %}
+                        <div class="flex flex-row items-center">
+                            <p class="text-lg font-bold text-gray-900">{{ comment.score }}</p>
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  viewBox="0 0 20 20"
                                  fill="currentColor"
                                  class="w-5 h-5">
                                 <path fill-rule="evenodd" d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z" clip-rule="evenodd" />
                             </svg>
+                        </div>
                         {% endif %}
                     </div>
                     {% if comment.user == user %}
